Let’s make this BuddyPress ready

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /**
- * Theme Name: vingtdixneuf
- * Theme URI: https://github.com/imath/vingtdixneuf.git
+ * Theme Name: Vingt DixNeuf
+ * Theme URI: https://github.com/imath/vingt-dixneuf.git
  * Author: imath
  * Author URI: https://imathi.eu
  * Description: Un thème enfant de TwentyNineteen.
